# ducktrace

./: .gitignore  README.md  build_db.py  cc_stats.py  find_duplicate_message_ids.py  mise.toml  pyproject.toml  report.py  requirements.txt  session_cost.py  session_stats.py
.github/workflows/: tests.yml
claude_analysis/: __init__.py  aggregate.py  claude_parser.py  codex_parser.py  db.py  models_cache.py  pi_parser.py  pop.py  pricing.py  prmatch.py  repos.py  text_filter.py  util.py
scripts/: clean_session.py
tests/: test_clean_session.py  test_models_cache.py
tests/fixtures/sessions/: a1164fe6-b620-4c21-acf6-8aa27cab7e59.jsonl  raw-session.jsonl  test-session.jsonl
tests/fixtures/sessions/raw/: README.md  raw-session.jsonl
