[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ducktrace"
version = "0.1.0"
description = "Parse Claude Code and Codex CLI session logs into a DuckDB store with token usage and cost attribution."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0",
    "pyarrow>=14.0",
    "anthropic>=0.40.0",
    "tokenizers>=0.13",
]

[project.urls]
Repository = "https://github.com/jmelloy/ducktrace"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["claude_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
